<resources>
    <string name="app_name">Sending-Objects</string>
    <string name="name">NAME</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="phone_no">PHONE NO.</string>
    <string name="roll_no">ROLL NO.</string>
    <string name="save">SAVE</string>
    <string name="student_s_name">STUDENT\'S NAME</string>
    <string name="gender">GENDER</string>
</resources>