<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/stuName"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"


     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/name"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">


  <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    />

 </com.google.android.material.textfield.TextInputLayout>

 <RadioGroup
     android:id="@+id/gender"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/stuName">

  <RadioButton
      android:id="@+id/female"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/female" />

  <RadioButton
      android:id="@+id/male"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/male" />
 </RadioGroup>
 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/rollNo"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"


     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/roll_no"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/gender">


  <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />

 </com.google.android.material.textfield.TextInputLayout>
 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/stuPhone"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"


     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/phone_no"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/rollNo">


  <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
     />

 </com.google.android.material.textfield.TextInputLayout>

 <Button
     android:id="@+id/saveBtn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:text="@string/save"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/stuPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>